[gd_scene load_steps=32 format=2]

[ext_resource path="res://assets/skin/walk1_wounded.png" type="Texture" id=1]
[ext_resource path="res://assets/skin/walk1.png" type="Texture" id=2]
[ext_resource path="res://assets/skin/walk2.png" type="Texture" id=3]
[ext_resource path="res://characters/Inventory.gd" type="Script" id=4]
[ext_resource path="res://characters/character.gd" type="Script" id=5]
[ext_resource path="res://assets/skin/sleep_wounded.png" type="Texture" id=6]
[ext_resource path="res://assets/skin/sleep.png" type="Texture" id=7]
[ext_resource path="res://assets/skin/walk2_wounded.png" type="Texture" id=8]
[ext_resource path="res://assets/skin/hurt.png" type="Texture" id=9]
[ext_resource path="res://assets/skin/hurt_wounded.png" type="Texture" id=10]
[ext_resource path="res://assets/skin/died.png" type="Texture" id=11]
[ext_resource path="res://characters/states/StateMachine.gd" type="Script" id=12]
[ext_resource path="res://characters/states/on_ground/Idle.gd" type="Script" id=13]
[ext_resource path="res://characters/states/on_ground/Move.gd" type="Script" id=14]
[ext_resource path="res://characters/states/in_air/Jump.gd" type="Script" id=15]
[ext_resource path="res://characters/states/in_air/Fall.gd" type="Script" id=16]
[ext_resource path="res://control/HealthBar.tscn" type="PackedScene" id=17]
[ext_resource path="res://characters/states/Die.gd" type="Script" id=18]
[ext_resource path="res://assets/skin/fall.png" type="Texture" id=19]
[ext_resource path="res://characters/states/combat/Hurt.gd" type="Script" id=20]
[ext_resource path="res://assets/skin/died_wounded.png" type="Texture" id=21]
[ext_resource path="res://characters/states/combat/Throw.gd" type="Script" id=22]
[ext_resource path="res://characters/states/combat/Place.gd" type="Script" id=23]
[ext_resource path="res://cameras/GCC2D.tscn" type="PackedScene" id=24]
[ext_resource path="res://assets/skin/fall_wounded.png" type="Texture" id=25]
[ext_resource path="res://assets/skin/jump.png" type="Texture" id=26]
[ext_resource path="res://assets/skin/jump_wounded.png" type="Texture" id=27]
[ext_resource path="res://characters/Agent.gd" type="Script" id=28]
[ext_resource path="res://characters/Action.gd" type="Script" id=29]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 26 ) ],
"loop": false,
"name": "throw",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "die",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 26 ) ],
"loop": true,
"name": "place",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle_wounded",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ) ],
"loop": true,
"name": "fall_wounded",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "sleep_wounded",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "sleep",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 27 ) ],
"loop": true,
"name": "place_wounded",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "die_wounded",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 27 ) ],
"loop": false,
"name": "throw_wounded",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ) ],
"loop": true,
"name": "jump_wounded",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 8 ) ],
"loop": true,
"name": "walk_wounded",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "hurt_wounded",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.78384, 18.6697 )

[node name="Character" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "place_wounded"

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 9 )
rotation = 3.14159
scale = Vector2( 4.32239, 2.41033 )
shape = SubResource( 2 )

[node name="Camera2D" parent="." instance=ExtResource( 24 )]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 12 )
start_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 13 )

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 14 )

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource( 15 )

[node name="Place" type="Node" parent="StateMachine"]
script = ExtResource( 23 )

[node name="Fall" type="Node" parent="StateMachine"]
script = ExtResource( 16 )

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource( 18 )

[node name="Hurt" type="Node" parent="StateMachine"]
script = ExtResource( 20 )

[node name="Throw" type="Node" parent="StateMachine"]
script = ExtResource( 22 )

[node name="HealthBar" parent="." instance=ExtResource( 17 )]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -44.0
margin_top = -62.0
margin_right = -44.0
margin_bottom = -62.0
rect_scale = Vector2( 1.24, 1.24 )

[node name="Agent" type="Node" parent="." groups=["AGENT"]]
script = ExtResource( 28 )

[node name="Action" type="Node" parent="."]
script = ExtResource( 29 )

[node name="Inventory" type="Node" parent="."]
script = ExtResource( 4 )

[connection signal="state_updated" from="." to="StateMachine" method="_on_Character_state_updated"]
[connection signal="animation_finished" from="AnimatedSprite" to="StateMachine/Place" method="_on_AnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="AnimatedSprite" to="StateMachine/Throw" method="_on_AnimatedSprite_animation_finished"]
